--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">ArticleSearch</string>
+    <string name="app_name">Flixster Pt.2</string>
+	<string name="top_rated_movies"><u>Top-Rated Movies</u></string>
+	<string name="upcoming_movies"><u>Upcoming Movies</u></string>
 </resources>
